--- a/DigimonWorldNet6/Frontend.WPF/ResourceDictionaries/Styles/DefaultFocusStyle.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/ResourceDictionaries/Styles/DefaultFocusStyle.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <Style x:Key="DefaultFocusStyle" TargetType="Control">
-        <Setter Property="Control.Template">
+        <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Control">
                     <Grid Background="Transparent">
