--- a/DigimonWorldNet6/Frontend.WPF/Windows/GeneralConfig/GeneralConfigWindow.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/GeneralConfig/GeneralConfigWindow.xaml
@@ -79,13 +79,13 @@
                                             Content="HOME"
                                             Command="{Binding ShowHomeConfigurationSectionCommand}"
                                             Tag="{Binding HomeConfigurationSectionIsSelected}" />
-                                    <Button Style="{StaticResource DefaultOptionPickerButtonStyle}"
-                                            Height="40"
-                                            Width="150"
-                                            HorizontalAlignment="Center"
-                                            Content="GENERAL"
-                                            Command="{Binding ShowGeneralConfigurationSectionCommand}"
-                                            Tag="{Binding GeneralConfigurationSectionIsSelected}" />
+                                    <!-- <Button Style="{StaticResource DefaultOptionPickerButtonStyle}" -->
+                                    <!--         Height="40" -->
+                                    <!--         Width="150" -->
+                                    <!--         HorizontalAlignment="Center" -->
+                                    <!--         Content="GENERAL" -->
+                                    <!--         Command="{Binding ShowGeneralConfigurationSectionCommand}" -->
+                                    <!--         Tag="{Binding GeneralConfigurationSectionIsSelected}" /> -->
                                     <Button Style="{StaticResource DefaultOptionPickerButtonStyle}"
                                             Height="40"
                                             Width="150"
