--- a/DigimonWorldNet6/Frontend.WPF/Windows/AboutAndCredits/AboutAndCreditsWindow.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/AboutAndCredits/AboutAndCreditsWindow.xaml
@@ -111,7 +111,7 @@
                             <Label Grid.Row="7" Grid.Column="1" HorizontalAlignment="Left" Style="{StaticResource DefaultLabelStyle}" Content="Flaminamigo" />
                             <Label Grid.Row="8" Grid.Column="1" HorizontalAlignment="Left" Style="{StaticResource DefaultLabelStyle}" Content="Flaminamigo" />
                             <Label Grid.Row="9" Grid.Column="1" HorizontalAlignment="Left" Style="{StaticResource DefaultLabelStyle}" Content="Harceru" />
-                            <Label Grid.Row="10" Grid.Column="1" HorizontalAlignment="Left" Style="{StaticResource DefaultLabelStyle}" Content="Rommstar (evolution sprites)" />
+                            <Label Grid.Row="10" Grid.Column="1" HorizontalAlignment="Left" Style="{StaticResource DefaultLabelStyle}" Content="Rommstar" />
                             <Label Grid.Row="11" Grid.Column="1" HorizontalAlignment="Left" Style="{StaticResource DefaultLabelStyle}" Content="www.digimon.fandom.com" />
                             <Label Grid.Row="12" Grid.Column="1" HorizontalAlignment="Left" Style="{StaticResource DefaultLabelStyle}" Content="www.grindosaur.com" />
 
