--- a/DigimonWorldNet6/Frontend.WPF/Windows/GeneralConfig/UserControls/HomeConfigurationSection.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/GeneralConfig/UserControls/HomeConfigurationSection.xaml
@@ -14,11 +14,11 @@
                    TextWrapping="Wrap">
             This is the configuration menu.<LineBreak />
             <LineBreak />
-            Here you can change the configuration of the application using settings of your preference. <LineBreak />
-            <LineBreak />
             Click one of the category buttons on the left to open up the configuration section for that category.<LineBreak />
             <LineBreak />
-            Saving the settings of that category will make it so the settings persist after closing down the application.
+            Apply the settings as you see fit and press save to store them. Upon (re)booting the tool the settings will be applied.<LineBreak />
+            <LineBreak />
+            Settings prefixed with an ' * ' are applied both immediately and on startup.
         </TextBlock>
     </Grid>
 </UserControl>
