--- a/DigimonWorldNet6/Frontend.WPF/Windows/GeneralConfig/UserControls/NarrationConfigurationSection.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/GeneralConfig/UserControls/NarrationConfigurationSection.xaml
@@ -42,7 +42,7 @@
             <ColumnDefinition Width="180" />
         </Grid.ColumnDefinitions>
 
-        <Label Grid.Row="0" Grid.Column="0" Style="{StaticResource DefaultLabelStyle}" Content="Narrator mode:" Margin="0, 0, 5, 0" />
+        <Label Grid.Row="0" Grid.Column="0" Style="{StaticResource DefaultLabelStyle}" Content="* Narrator mode:" Margin="0, 0, 5, 0" />
         <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Center">
             <Button Style="{StaticResource DefaultOptionPickerButtonStyle}"
                     Height="{StaticResource OptionHeight}"
