Added navigation buttons. They still do not navigate though. But the panel is there and it has 2 buttons with fancy animations.

--- a/DigimonWorldNet6/Frontend.WPF/App.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/App.xaml
@@ -16,6 +16,12 @@
             <system:Int32 x:Key="DefaultTooltipDelay">750</system:Int32>
             <system:Double x:Key="DefaultButtonHeight">40</system:Double>
             <system:Double x:Key="DefaultTextHeightSpacing">16</system:Double>
+            
+            <system:Double x:Key="NavigationButtonWidth">50</system:Double>
+            <system:Double x:Key="NavigationButtonTextWidth">80</system:Double>
+
+            <system:Double x:Key="ButtonWidth">50</system:Double>
+            <system:Double x:Key="TextBlockWidth">80</system:Double>
 
             <conversion:EnumToImageConverter x:Key="EnumToImageConverter" />
 
