--- a/DigimonWorldNet6/Frontend.WPF/Windows/MusicPlayer/MusicPlayerWindow.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/MusicPlayer/MusicPlayerWindow.xaml
@@ -1,21 +1,21 @@
 <baseClasses:BaseWindow x:Class="DigimonWorld.Frontend.WPF.Windows.MusicPlayer.MusicPlayerWindow"
-            xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-            xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-            xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-            xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-            xmlns:system="clr-namespace:System;assembly=System.Runtime"
-            xmlns:userControls1="clr-namespace:DigimonWorld.Frontend.WPF.Windows.MusicPlayer.UserControls"
-            xmlns:musicPlayer1="clr-namespace:DigimonWorld.Frontend.WPF.Windows.MusicPlayer"
-            xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
-            xmlns:baseClasses="clr-namespace:DigimonWorld.Frontend.WPF.Windows.BaseClasses"
-            mc:Ignorable="d"
-            d:DataContext="{d:DesignInstance Type=musicPlayer1:MusicPlayerViewModel, IsDesignTimeCreatable=True}"
-            ResizeMode="NoResize"
-            SizeToContent="WidthAndHeight"
-            WindowStyle="None"
-            AllowsTransparency="True"
-            Background="Transparent"
-            WindowStartupLocation="Manual">
+                        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                        xmlns:system="clr-namespace:System;assembly=System.Runtime"
+                        xmlns:userControls1="clr-namespace:DigimonWorld.Frontend.WPF.Windows.MusicPlayer.UserControls"
+                        xmlns:musicPlayer1="clr-namespace:DigimonWorld.Frontend.WPF.Windows.MusicPlayer"
+                        xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
+                        xmlns:baseClasses="clr-namespace:DigimonWorld.Frontend.WPF.Windows.BaseClasses"
+                        mc:Ignorable="d"
+                        d:DataContext="{d:DesignInstance Type=musicPlayer1:MusicPlayerViewModel, IsDesignTimeCreatable=True}"
+                        ResizeMode="NoResize"
+                        SizeToContent="WidthAndHeight"
+                        WindowStyle="None"
+                        AllowsTransparency="True"
+                        Background="Transparent"
+                        WindowStartupLocation="Manual">
 
     <Window.Resources>
         <ResourceDictionary>
@@ -61,14 +61,14 @@
                 </Grid.ColumnDefinitions>
 
                 <Grid Grid.Column="1" Width="60" Height="50" Background="Transparent" SnapsToDevicePixels="True" UseLayoutRounding="True">
-                    <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3" Background="Black"
+                    <Border CornerRadius="8" BorderBrush="Black" BorderThickness="3" Background="Black"
                             ToolTipService.InitialShowDelay="750">
                         <Border.ToolTip>
                             <ToolTip Style="{StaticResource DefaultToolTipRightStyle}">
                                 <TextBlock Text="Click and hold to drag the application window" />
                             </ToolTip>
                         </Border.ToolTip>
-                        <Border CornerRadius="5" BorderBrush="#4A9FC5" BorderThickness="3" Background="#4A9FC5">
+                        <Border CornerRadius="8" BorderBrush="#4A9FC5" BorderThickness="3" Background="#4A9FC5">
                             <Border CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="3" Background="#90D9FA">
                                 <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3" Background="#2E3841">
                                     <Border x:Name="InnerBorder" CornerRadius="5" BorderBrush="Transparent" BorderThickness="0" Background="#80000000" Opacity="0.5"
@@ -107,8 +107,8 @@
                     <Button.Template>
                         <ControlTemplate TargetType="Button">
                             <Grid Background="Transparent" SnapsToDevicePixels="True" UseLayoutRounding="True">
-                                <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3" Padding="0" Background="Black">
-                                    <Border CornerRadius="5" BorderBrush="#4A9FC5" BorderThickness="3" Padding="0" Background="#4A9FC5">
+                                <Border CornerRadius="8" BorderBrush="Black" BorderThickness="3" Padding="0" Background="Black">
+                                    <Border CornerRadius="8" BorderBrush="#4A9FC5" BorderThickness="3" Padding="0" Background="#4A9FC5">
                                         <Border CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="3" Padding="0" Background="#90D9FA">
                                             <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3" Padding="0" Background="#2E3841">
                                                 <Border x:Name="InnerBorder" CornerRadius="5" BorderBrush="Transparent" BorderThickness="0" Background="#80000000" Opacity="0.5">
@@ -148,8 +148,8 @@
                     <Button.Template>
                         <ControlTemplate TargetType="Button">
                             <Grid Background="Transparent" SnapsToDevicePixels="True" UseLayoutRounding="True">
-                                <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3" Padding="0" Background="Black">
-                                    <Border CornerRadius="5" BorderBrush="#4A9FC5" BorderThickness="3" Padding="0" Background="#4A9FC5">
+                                <Border CornerRadius="8" BorderBrush="Black" BorderThickness="3" Padding="0" Background="Black">
+                                    <Border CornerRadius="8" BorderBrush="#4A9FC5" BorderThickness="3" Padding="0" Background="#4A9FC5">
                                         <Border CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="3" Padding="0" Background="#90D9FA">
                                             <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3" Padding="0" Background="#2E3841">
                                                 <Border x:Name="InnerBorder" CornerRadius="5" BorderBrush="Transparent" BorderThickness="0" Background="#80000000" Opacity="0.5">
@@ -185,9 +185,9 @@
         </Border>
 
         <Border x:Name="OuterBorderWindow" Grid.Row="1" Grid.Column="1" Background="Transparent" Panel.ZIndex="1">
-            <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3" Background="Black">
-                <Border CornerRadius="5" BorderBrush="#4A9FC5" BorderThickness="3" Background="#4A9FC5">
-                    <Border CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="3" Background="#90D9FA">
+            <Border CornerRadius="8" BorderBrush="Black" BorderThickness="3">
+                <Border CornerRadius="8" BorderBrush="#4A9FC5" BorderThickness="3">
+                    <Border CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="3">
                         <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3" Background="#2E3841" Padding="10">
 
                             <Grid>
