--- a/DigimonWorldNet6/Frontend.WPF/Windows/Main/MainWindow.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/Main/MainWindow.xaml
@@ -6,7 +6,6 @@
         xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:main="clr-namespace:DigimonWorld.Frontend.WPF.Windows.Main"
         xmlns:historicEvolutionPicker="clr-namespace:DigimonWorld.Frontend.WPF.Windows.Main.UserControls.HistoricEvolutionPicker"
-        xmlns:evolutionTool="clr-namespace:DigimonWorld.Frontend.WPF.Windows.Main.UserControls.EvolutionTool"
         xmlns:navigation="clr-namespace:DigimonWorld.Frontend.WPF.Windows.Main.UserControls.Navigation"
         xmlns:system="clr-namespace:System;assembly=System.Runtime"
         mc:Ignorable="d"
@@ -31,7 +30,7 @@
             <system:Double x:Key="BottomPanelYOffset">-475</system:Double>
             <GridLength x:Key="LeftPanelWidth">120</GridLength>
             <system:Double x:Key="LeftPanelYOffset">120</system:Double>
-            
+
             <BitmapImage x:Key="ClosedLeftPaneImage" UriSource="pack://application:,,,/Frontend.WPF;component/Images/ComponentLabels/label-left-no-focus.png" />
             <BitmapImage x:Key="OpenLeftPaneImage" UriSource="pack://application:,,,/Frontend.WPF;component/Images/ComponentLabels/label-left-focus.png" />
             <BitmapImage x:Key="ClosedBottomPaneImage" UriSource="pack://application:,,,/Frontend.WPF;component/Images/ComponentLabels/label-bottom-no-focus.png" />
@@ -357,7 +356,7 @@
                 <Border CornerRadius="8" BorderBrush="#4A9FC5" BorderThickness="3">
                     <Border CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="3">
                         <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3">
-                            <evolutionTool:EvolutionToolUserControl x:Name="EvolutionToolUserControl" />
+                            <ContentControl Content="{Binding CurrentSelectedMainWindowContent}" x:Name="CurrentSelectedMainWindowContent" />
                         </Border>
                     </Border>
                 </Border>
@@ -383,7 +382,7 @@
                     <Border CornerRadius="8" BorderBrush="#4A9FC5" BorderThickness="3" Margin="0" Padding="0">
                         <Border CornerRadius="5" BorderBrush="#90D9FA" BorderThickness="3" Padding="0">
                             <Border CornerRadius="5" BorderBrush="Black" BorderThickness="3" Padding="0" Background="#80202020">
-                                <navigation:NavigationUserControl HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                <navigation:NavigationUserControl HorizontalAlignment="Center" VerticalAlignment="Center" />
                             </Border>
                         </Border>
                     </Border>
