--- a/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/EvolutionCalculator/EvolutionCalculatorUserControl.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/EvolutionCalculator/EvolutionCalculatorUserControl.xaml
@@ -1,4 +1,4 @@
-<UserControl x:Class="DigimonWorld.Frontend.WPF.Windows.Main.UserControls.EvolutionTool.EvolutionToolUserControl"
+<UserControl x:Class="DigimonWorld.Frontend.WPF.Windows.Main.UserControls.EvolutionCalculator.EvolutionCalculatorUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:combatStatValidation="clr-namespace:DigimonWorld.Frontend.WPF.Validation.CombatStats"
@@ -7,10 +7,10 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
              xmlns:behaviors="clr-namespace:DigimonWorld.Frontend.WPF.Behaviors"
-             xmlns:userControls1="clr-namespace:DigimonWorld.Frontend.WPF.Windows.Main.UserControls.EvolutionTool.UserControls"
-             xmlns:evolutionTool1="clr-namespace:DigimonWorld.Frontend.WPF.Windows.Main.UserControls.EvolutionTool"
+             xmlns:evolutionCalculator="clr-namespace:DigimonWorld.Frontend.WPF.Windows.Main.UserControls.EvolutionCalculator"
+             xmlns:userControls1="clr-namespace:DigimonWorld.Frontend.WPF.Windows.Main.UserControls.EvolutionCalculator.UserControls"
              mc:Ignorable="d"
-             d:DataContext="{d:DesignInstance Type=evolutionTool1:EvolutionToolViewModel, IsDesignTimeCreatable=True}">
+             d:DataContext="{d:DesignInstance Type=evolutionCalculator:EvolutionCalculatorViewModel, IsDesignTimeCreatable=True}">
 
     <UserControl.Resources>
         <ResourceDictionary>
@@ -96,7 +96,7 @@
 
                     <Label Grid.Column="0" Grid.Row="1" Content="HP:" Style="{StaticResource DefaultLabelStyle}">
                         <Label.ToolTip>
-                           <ToolTip Style="{StaticResource DefaultToolTipLeftStyle}">
+                            <ToolTip Style="{StaticResource DefaultToolTipLeftStyle}">
                                 <TextBlock Text="The 'HP' stat value of your digimon." />
                             </ToolTip>
                         </Label.ToolTip>
@@ -121,7 +121,7 @@
 
                     <Label Grid.Column="0" Grid.Row="2" Content="MP:" Style="{StaticResource DefaultLabelStyle}">
                         <Label.ToolTip>
-                           <ToolTip Style="{StaticResource DefaultToolTipLeftStyle}">
+                            <ToolTip Style="{StaticResource DefaultToolTipLeftStyle}">
                                 <TextBlock Text="The 'MP' stat value of your digimon." />
                             </ToolTip>
                         </Label.ToolTip>
@@ -146,7 +146,7 @@
 
                     <Label Grid.Column="0" Grid.Row="3" Content="Off:" Style="{StaticResource DefaultLabelStyle}">
                         <Label.ToolTip>
-                           <ToolTip Style="{StaticResource DefaultToolTipLeftStyle}">
+                            <ToolTip Style="{StaticResource DefaultToolTipLeftStyle}">
                                 <TextBlock Text="The 'Off' stat value of your digimon." />
                             </ToolTip>
                         </Label.ToolTip>
@@ -171,7 +171,7 @@
 
                     <Label Grid.Column="0" Grid.Row="4" Content="Def:" Style="{StaticResource DefaultLabelStyle}">
                         <Label.ToolTip>
-                           <ToolTip Style="{StaticResource DefaultToolTipLeftStyle}">
+                            <ToolTip Style="{StaticResource DefaultToolTipLeftStyle}">
                                 <TextBlock Text="The 'Def' stat value of your digimon." />
                             </ToolTip>
                         </Label.ToolTip>
@@ -196,7 +196,7 @@
 
                     <Label Grid.Column="0" Grid.Row="5" Content="Speed:" Style="{StaticResource DefaultLabelStyle}">
                         <Label.ToolTip>
-                           <ToolTip Style="{StaticResource DefaultToolTipLeftStyle}">
+                            <ToolTip Style="{StaticResource DefaultToolTipLeftStyle}">
                                 <TextBlock Text="The 'Speed' stat value of your digimon." />
                             </ToolTip>
                         </Label.ToolTip>
@@ -221,7 +221,7 @@
 
                     <Label Grid.Column="0" Grid.Row="6" Content="Brains:" Style="{StaticResource DefaultLabelStyle}">
                         <Label.ToolTip>
-                           <ToolTip Style="{StaticResource DefaultToolTipLeftStyle}">
+                            <ToolTip Style="{StaticResource DefaultToolTipLeftStyle}">
                                 <TextBlock Text="The 'Brains' stat value of your digimon." />
                             </ToolTip>
                         </Label.ToolTip>
@@ -246,7 +246,7 @@
 
                     <Label Grid.Column="0" Grid.Row="7" Content="Care Mistakes:" Style="{StaticResource DefaultLabelStyle}">
                         <Label.ToolTip>
-                           <ToolTip Style="{StaticResource DefaultToolTipLeftStyle}">
+                            <ToolTip Style="{StaticResource DefaultToolTipLeftStyle}">
                                 <TextBlock
                                     Text="The care mistake count of your digimon.&#x0a;&#x0a;This number is reset upon evolution and death.&#x0a;&#x0a;Care mistakes are:&#x0a;- pooping on the ground&#x0a;- not feeding, while energy level is below threshold, until the hunger timer runs out while not sleeping&#x0a;- not sleeping until the sleeping timer runs out" />
                             </ToolTip>
@@ -273,7 +273,7 @@
 
                     <Label Grid.Column="0" Grid.Row="8" Content="Weight:" Style="{StaticResource DefaultLabelStyle}">
                         <Label.ToolTip>
-                           <ToolTip Style="{StaticResource DefaultToolTipLeftStyle}">
+                            <ToolTip Style="{StaticResource DefaultToolTipLeftStyle}">
                                 <TextBlock Text="The weight value of your digimon." />
                             </ToolTip>
                         </Label.ToolTip>
@@ -298,7 +298,7 @@
 
                     <Label Grid.Column="0" Grid.Row="9" Content="Happiness:" Style="{StaticResource DefaultLabelStyle}">
                         <Label.ToolTip>
-                           <ToolTip Style="{StaticResource DefaultToolTipLeftStyle}">
+                            <ToolTip Style="{StaticResource DefaultToolTipLeftStyle}">
                                 <TextBlock
                                     Text="The happiness value of your digimon.&#x0a;&#x0a;A full blue bar with a red angry face icon is -100.&#x0a;A blue slither but mostly full pink bar with a yellow smiling face icon is 0.&#x0a;A full blue bar with yellow smiling face icon is 100." />
                             </ToolTip>
@@ -325,7 +325,7 @@
 
                     <Label Grid.Column="0" Grid.Row="10" Content="Discipline:" Style="{StaticResource DefaultLabelStyle}">
                         <Label.ToolTip>
-                           <ToolTip Style="{StaticResource DefaultToolTipLeftStyle}">
+                            <ToolTip Style="{StaticResource DefaultToolTipLeftStyle}">
                                 <TextBlock
                                     Text="The discipline value of your digimon.&#x0a;&#x0a;A full blue bar with a blue face icon with sunglasses is 0.&#x0a;A blue slither but mostly full pink bar with a yellow face icon with glasses is 50.&#x0a;A full blue bar with yellow face icon with glasses icon is 100." />
                             </ToolTip>
@@ -352,7 +352,7 @@
 
                     <Label Grid.Column="0" Grid.Row="11" Content="Battles:" Style="{StaticResource DefaultLabelStyle}">
                         <Label.ToolTip>
-                           <ToolTip Style="{StaticResource DefaultToolTipLeftStyle}">
+                            <ToolTip Style="{StaticResource DefaultToolTipLeftStyle}">
                                 <TextBlock Text="The battle count of your digimon.&#x0a;&#x0a;This number is reset upon evolution and death." />
                             </ToolTip>
                         </Label.ToolTip>
@@ -377,7 +377,7 @@
 
                     <Label Grid.Column="0" Grid.Row="12" Content="Techniques:" Style="{StaticResource DefaultLabelStyle}">
                         <Label.ToolTip>
-                           <ToolTip Style="{StaticResource DefaultToolTipLeftStyle}">
+                            <ToolTip Style="{StaticResource DefaultToolTipLeftStyle}">
                                 <TextBlock
                                     Text="The number of total known techniques.&#x0a;&#x0a;You can find this in the 'Tech' of the Digimon window.&#x0a;&#x0a;Count all the available techniques, not just those that your digimon can use." />
                             </ToolTip>
