--- a/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/EvolutionCalculator/UserControls/JijimonNaratorTextDisplay.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/EvolutionCalculator/UserControls/JijimonNaratorTextDisplay.xaml
@@ -1,4 +1,4 @@
-<UserControl x:Class="DigimonWorld.Frontend.WPF.Windows.Main.UserControls.EvolutionTool.UserControls.JijimonNaratorTextDisplay"
+<UserControl x:Class="DigimonWorld.Frontend.WPF.Windows.Main.UserControls.EvolutionCalculator.UserControls.JijimonNaratorTextDisplay"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
