--- a/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/Navigation/UserControls/DigiWikiNavigationButton.xaml
+++ b/DigimonWorldNet6/Frontend.WPF/Windows/Main/UserControls/Navigation/UserControls/DigiWikiNavigationButton.xaml
@@ -4,10 +4,10 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d">
-    
-    <Button Background="Transparent" BorderThickness="0" Focusable="False">
+
+    <Button Background="Transparent" BorderThickness="0" Focusable="False" Command="{Binding DataContext.ShowDigiWikiCommand, RelativeSource={RelativeSource AncestorType=Window}}">
         <Button.Template>
-            <ControlTemplate TargetType="Button" >
+            <ControlTemplate TargetType="Button">
                 <Grid Background="Transparent" Margin="7">
                     <Border Margin="-5" BorderThickness="2" CornerRadius="2" Background="Transparent">
                         <Border.BorderBrush>
@@ -31,7 +31,7 @@
                     </Border>
                     <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
                         <Image x:Name="AnimatedImage" Source="/Images/Menu/Wiki1.png" Width="{StaticResource ButtonWidth}" Stretch="UniformToFill" />
-                        <TextBlock Width="{StaticResource TextBlockWidth}" TextAlignment="Center" TextWrapping="Wrap">Evolution Calculator</TextBlock>
+                        <TextBlock Width="{StaticResource TextBlockWidth}" TextAlignment="Center" TextWrapping="Wrap">Digi-Wiki</TextBlock>
                     </StackPanel>
                 </Grid>
                 <ControlTemplate.Triggers>
